[package]
name = "upd"
version = "0.0.3"
edition = "2024"
rust-version = "1.91.1"
description = "A fast dependency updater for Python and Node.js projects"
license = "MIT"
repository = "https://github.com/rvben/upd"
homepage = "https://github.com/rvben/upd"
documentation = "https://github.com/rvben/upd#readme"
authors = ["Ruben Jongejan <ruben.jongejan@gmail.com>"]
keywords = ["dependencies", "update", "python", "nodejs", "npm"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = [
    ".github/*",
    ".gitignore",
    "scripts/*",
    "target/*",
]

[lib]
name = "upd"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "upd"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime + HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = "0.22"

# Version parsing
pep440_rs = "0.7"
semver = "1"

# File handling
ignore = "0.4"
directories = "5"

# Error handling
anyhow = "1"
thiserror = "1"

# Misc
regex = "1"
colored = "2"
async-trait = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
