[package]
name = "upd"
version = "0.0.20"
edition = "2024"
rust-version = "1.91.1"
description = "A fast dependency updater for Python, Node.js, Rust, and Go projects"
license = "MIT"
repository = "https://github.com/rvben/upd"
homepage = "https://github.com/rvben/upd"
documentation = "https://github.com/rvben/upd#readme"
authors = ["Ruben Jongejan <ruben.jongejan@gmail.com>"]
keywords = ["dependencies", "update", "python", "nodejs", "rust"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = [
    ".github/*",
    ".gitignore",
    "scripts/*",
    "target/*",
]

[lib]
name = "upd"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "upd"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5.53", features = ["derive"] }

# Async runtime + HTTP
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.25", default-features = false, features = ["json", "gzip", "rustls-tls"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.8"
toml_edit = "0.23.9"

# Version parsing
pep440_rs = "0.7.3"
semver = "1.0.27"

# File handling
ignore = "0.4.25"
directories = "6.0.0"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Misc
regex = "1.12.2"
colored = "3.0.0"
async-trait = "0.1.89"
futures = "0.3.31"
url = "2.5"

[dev-dependencies]
tempfile = "3.23.0"
wiremock = "0.6"
serial_test = "3.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
