[package]
name = "upd"
version = "0.1.3"
edition = "2024"
rust-version = "1.95.0"
description = "A fast dependency updater for Python, Node.js, Rust, Go, Ruby, Terraform, GitHub Actions, pre-commit, and Mise projects"
license = "MIT"
repository = "https://github.com/rvben/upd"
homepage = "https://github.com/rvben/upd"
documentation = "https://github.com/rvben/upd#readme"
authors = ["Ruben Jongejan <ruben.jongejan@gmail.com>"]
keywords = ["dependencies", "update", "python", "nodejs", "rust"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = [
    ".github/*",
    ".gitignore",
    "scripts/*",
    "target/*",
]

[lib]
name = "upd"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "upd"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.6.1", features = ["derive"] }

# Async runtime + HTTP
tokio = { version = "1.52.1", features = ["full"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "gzip", "rustls"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1"
toml_edit = "0.25.11"

# Version parsing
pep440_rs = "0.7.3"
semver = "1.0.28"

# File handling
ignore = "0.4.25"
directories = "6.0.0"

# Error handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Misc
regex = "1.12.3"
colored = "3.1.1"
async-trait = "0.1.89"
futures = "0.3.32"
url = "2.5"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }

[dev-dependencies]
tempfile = "3.27.0"
wiremock = "0.6"
serial_test = "3.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
