[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "upd"
dynamic = ["version"]
description = "A fast dependency updater for Python and Node.js projects"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "Ruben Jongejan", email = "ruben.jongejan@gmail.com" }
]
keywords = ["dependencies", "update", "pypi", "npm", "requirements", "pyproject"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
]

[project.urls]
Homepage = "https://github.com/rvben/upd"
Repository = "https://github.com/rvben/upd"
Issues = "https://github.com/rvben/upd/issues"

[tool.maturin]
bindings = "bin"
strip = true
