[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "upd-cli"
dynamic = ["version"]
description = "A fast dependency updater for Python and Node.js projects"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ruben Jongejan", email = "ruben.jongejan@gmail.com" }]
keywords = ["dependencies", "update", "python", "nodejs", "npm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Build Tools",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/rvben/upd"
Repository = "https://github.com/rvben/upd"
Documentation = "https://github.com/rvben/upd#readme"

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
python-packages = ["python/upd_cli"]
strip = true
